# aws-mcp

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/aws_mcp/: __init__.py  server.py
src/aws_mcp/handlers/: __init__.py  ec2.py  lambda_.py  s3.py
src/aws_mcp/service/: ec2.py  s3.py
src/aws_mcp/utils/: __init__.py  auth.py  helpers.py  logging.py
tests/: __init__.py  test_server.py  test_utils.py
tests/handlers/: test_ec2.py  test_ec2_handler.py  test_s3_handler.py
tests/service/: ec2.py  test_s3.py
